--- a/src/main/resources/templates/layout/base.html
+++ b/src/main/resources/templates/layout/base.html
@@ -32,6 +32,9 @@
 
     <link rel="stylesheet" th:href="@{/css/output.css}">
 
+    <!-- Alpine.js -->
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.15.3/dist/cdn.min.js"></script>
+
     <th:block layout:fragment="extra-head"></th:block>
 </head>
 <body class="bg-gray-50 min-h-screen flex flex-col">
